add getOffsets using adminClient (#482)
* add getOffsets using adminClient


* update after review
